--- a/Plots.ipynb
+++ b/Plots.ipynb
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87eea61fda0044d485bb1a955360b353",
+       "model_id": "5e1006842c1545e8b737f7de80ae9a93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87eea61fda0044d485bb1a955360b353",
+       "model_id": "5e1006842c1545e8b737f7de80ae9a93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,6 +117,18 @@
     }
    ],
    "source": [
+    "# Read in the file\n",
+    "with open('results/veloci.3.vtk', 'r') as file :\n",
+    "  filedata = file.read()\n",
+    "\n",
+    "# Replace the target string\n",
+    "filedata = filedata.replace('0.0000E+00', '0.0000')\n",
+    "filedata = filedata.replace('E+00', ' ')\n",
+    "# Write the file out again\n",
+    "with open('results/veloci.3_.vtk', 'w') as file:\n",
+    "  file.write(filedata)\n",
+    "\n",
+    "\n",
     "mesh = pv.read('results/veloci.3.vtk')  \n",
     "pl = pv.PlotterITK()\n",
     "pl.add_mesh(mesh, smooth_shading=True)\n",
