updates for colab

--- a/Plots_colab.ipynb
+++ b/Plots_colab.ipynb
@@ -128,10 +128,10 @@
     "# Read in the file\n",
     "with open('/content/drive/MyDrive/results/veloci.3.vtk', 'r') as file :\n",
     "  filedata = file.read()\n",
-    " Replace the target string\n",
+    "# Replace the target string\n",
     "filedata = filedata.replace('0.0000E+00', '0.0000')\n",
     "filedata = filedata.replace('E+00', ' ')\n",
-    " Write the file out again\n",
+    "# Write the file out again\n",
     "with open('/content/drive/MyDrive/results/veloci.3_.vtk', 'w') as file:\n",
     "  file.write(filedata)\n",
     "\n",
