new text file output

--- a/Plots_colab.ipynb
+++ b/Plots_colab.ipynb
@@ -166,10 +166,25 @@
     "#Uncomment first line if notebook is run locally, and second line if it is run in colab\n",
     "#path=\"results/\"; f=\"transpiration\"\n",
     "path=\"/content/drive/MyDrive/results/\"; f=\"transpiration\"\n",
-    "data = np.loadtxt(path+f,delimiter=';')  \n",
-    "t_ = data[0,data[0,:]<=3] \n",
-    "a_ = data[1,data[0,:]<=3]\n",
-    "plt.plot(t_,a_, label = f, linewidth = 1.5, alpha = 1)\n",
+    "\n",
+    "data, H_collar = np.array_split(np.loadtxt(path+f, dtype=str), [-1], axis=1)\n",
+    "H_collar.flatten().tolist(); H_collar=np.array(H_collar,dtype=float)\n",
+    "\n",
+    "data, soil_lim_nodes = np.array_split(data,[-1], axis=1)\n",
+    "soil_lim_nodes.flatten().tolist(); soil_lim_nodes=np.array(soil_lim_nodes,dtype=float)\n",
+    "\n",
+    "data, sAvg = np.array_split(data,[-1], axis=1)\n",
+    "sAvg.flatten().tolist(); sAvg=np.array(sAvg,dtype=float)\n",
+    "\n",
+    "data, Tact = np.array_split(data,[-1], axis=1)\n",
+    "Tact.flatten().tolist(); Tact=np.array(Tact,dtype=float)\n",
+    "\n",
+    "data, Tpot = np.array_split(data,[-1], axis=1)\n",
+    "Tpot.flatten().tolist(); Tpot=np.array(Tpot,dtype=float)\n",
+    "time=data.flatten().tolist(); time=np.array(time,dtype=float)\n",
+    "\n",
+    "\n",
+    "plt.plot(time,Tact, linewidth = 1.5)\n",
     "plt.show()"
    ]
   },
