--- a/Plots_colab.ipynb
+++ b/Plots_colab.ipynb
@@ -165,7 +165,7 @@
    "source": [
     "#Uncomment first line if notebook is run locally, and second line if it is run in colab\n",
     "#path=\"results/\"; f=\"transpiration\"\n",
-    "path=\"/content/drive/MyDrive/results/\"; f=\"transpiration\"\n",
+    "path=\"/content/drive/MyDrive/results/\"; f=\"log_without_headers.txt\"\n",
     "\n",
     "data, H_collar = np.array_split(np.loadtxt(path+f, dtype=str), [-1], axis=1)\n",
     "H_collar.flatten().tolist(); H_collar=np.array(H_collar,dtype=float)\n",
